[package]
name = "iroh-h3"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "^1.10"
futures = "^0.3.31"
h3 = "^0.0.8"
iroh = "^0.95.1"
tokio-util = "^0.7.17"

# Optional dependencies for axum integration

tokio = { version = "^1.48", features = [
    "rt",
], optional = true, default-features = false }
axum = { version = "^0.8.6", optional = true, default-features = false }
http = { version = "^1.3", optional = true }
tower-service = { version = "^0.3.3", optional = true }
http-body = { version = "^1.0", optional = true }

[features]
axum = [
    "dep:axum",
    "dep:tokio",
    "dep:http",
    "dep:tower-service",
    "dep:http-body",
]
