[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.6"
bytes = "1.10.1"
http = "1.3.1"
http-body-util = "0.1.3"
iroh = "0.95.1"
iroh-h3-axum = { version = "0.1.0", path = "../iroh-h3-axum" }
iroh-h3-client = { version = "0.1.0", path = "../iroh-h3-client" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
