[package]
name = "iroh-h3-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh-h3 = { path = "../iroh-h3" }
bytes = "^1.10"
futures = "^0.3.31"
h3 = "^0.0.8"
iroh = "^0.95.1"
tokio = { version = "^1.48", features = ["rt"], default-features = false }
axum = { version = "^0.8.6", default-features = false }
http = { version = "^1.3" }
tower-service = { version = "^0.3.3" }
http-body = { version = "^1.0" }
