[package]
name = "iroh-h3-client"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh-h3 = { path = "../iroh-h3" }
bytes = "^1.10"
futures = "^0.3.31"
h3 = "^0.0.8"
iroh = "^0.95.1"
http = { version = "^1.3" }
http-body = { version = "^1.0" }
thiserror = "^2.0"
tokio = { version = "^1.48", features = ["rt"] }
