[package]
name = "iroh-h3-client"
version = "0.1.0"
edition = "2024"
description = "HTTP/3 client utilities over Iroh's QUIC P2P transport."
license = "MIT"
repository = "https://github.com/Le-Maz/iroh-h3"
readme = "../README.md"
keywords = ["quic", "p2p", "http3", "h3", "client"]
categories = ["network-programming", "asynchronous"]

[dependencies]
iroh-h3 = { version = "0.1.0", path = "../iroh-h3" }
bytes = "1.10"
futures = "0.3.31"
h3 = "0.0.8"
iroh = "0.95.1"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1.3"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt"] }
dashmap = "6.1"
tracing = "0.1.41"

# JSON support
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
json = ["serde", "serde_json"]
